--- a/spectrum.tex
+++ b/spectrum.tex
@@ -22,7 +22,7 @@
 
 \end{abstract}
 
-\keywords{}
+\keywords{spectrum}
 
 \section{Introduction} \label{sec:intro}
 Three dimentional data cubes are common format for spectropy mapping products.
