Modify the Abstract

--- a/spectrum.tex
+++ b/spectrum.tex
@@ -18,7 +18,7 @@
 
 
 \begin{abstract}
-
+To get the spectral feature of the extended astronomical sources, it is not clear how many pixels of the source region should be summed.
 
 \end{abstract}
 
